--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="burakyabgu">
+    <meta name="author" content="burakyabgu">
+    <meta name="background-color" content="#FFFFFF">
+    <meta name="description" content="Hi there! I'm Burak, this is my personal portfolio website.">
     <meta name="theme-color" content="#3366CC">
     <meta name="theme-color" media="{prefers-color-scheme: light}" content="white">
     <meta name="theme-color" media="{prefers-color-scheme: dark}" content="black">
