--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <nav class="nav-menu d-none d-lg-block">
                 <div class="social-links">
                     <a href="https://medium.com/@burakyabgu" target="_blank" class="medium"><i class="bx bxl-medium"></i></a>
-                    <a href="https://www.github.com/burakyabgu" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+                    <a href="https://www.github.com/31000s" target="_blank" class="github"><i class="bx bxl-github"></i></a>
                     <a href="https://www.instagram.com/3.10.00s" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                     <a href="mailto:burakyabgu@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
                 </div>
