--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header id="header" class="header-tops">
         <div class="container">
 
-            <h1>Burak Yabgu</h1>
+            <h1>Burak</h1>
             <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
             <nav class="nav-menu d-none d-lg-block">
                 <div class="social-links">
