--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="burakyabgu">
-    <meta name="author" content="burakyabgu">
+    <meta name="title" content="burakyabgu, 31000s">
+    <meta name="author" content="burakyabgu, 31000s">
     <meta name="background-color" content="#FFFFFF">
     <meta name="description" content="Hi there! I'm Burak, this is my personal portfolio website.">
     <meta name="theme-color" content="#3366CC">
     <meta name="theme-color" media="{prefers-color-scheme: light}" content="white">
     <meta name="theme-color" media="{prefers-color-scheme: dark}" content="black">
-    <title>Burak Yabgu</title>
+    <title>Burak Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
